--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-	<h1>La aplicación esta corriendo!</h1>
+	<div><center>
+	<h1>HORA ACTUAL:</h1>
+	<h1 id="hora">Hora actual:</h1>
+	</div></center>
 
-	<script src="./index.js" type="module"></script>
+	<script src="index.js" type="module"></script>
 </body>
 
 </html>
