--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clock Digital</title>
+    <link rel="stylesheet" href="clock.css" />
+  </head>
+  <body>
+    <div id="todo">
+      <div id="encabezado"><h1 id="digitalc">DIGITAL CLOCK</h1></div>
+      <div id="hora">
+        <br>
+            <h2 id="horaActual"></h2>
+        </div>
+       
+      
+    </div>
 
-<head>
-	<title>Ejemplo básico</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<h1>La aplicación esta corriendo!</h1>
-</body><div></div>
+    <script src="clock.js"></script>
+  </body>
 </html>
